--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 * {
-    display: flex;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
   }
   
   .menu-container {
+    /* ... */
+    display: flex;
+    justify-content: center;    /* Add this */
     color: #fff;
     background-color: #5995DA;  /* Blue */
     padding: 20px 0;
@@ -14,4 +16,6 @@
   .menu {
     border: 1px solid #fff;  /* For debugging */
     width: 900px;
+    display: flex;
+    justify-content: space-around;
   }
